# watch_ui

./: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
src/: main.c
src/ui/: notification_ui.c  notification_ui.h  watchface_ui.c  watchface_ui.h
